--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">JetpackNavigation</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">FakeStore API</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
